--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,4 +13,4 @@ RUN mkdir logs
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
-CMD ["python", "main.py"]
+ENTRYPOINT ["python", "main.py"]
