--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ pathspec==0.12.1
     # via black
 platformdirs==4.4.0
     # via black
+python-dotenv==1.1.1
+    # via -r requirements.in
 pytokens==0.1.10
     # via black
 requests==2.32.5
