Update authorization check in test workflow to use correct GitHub actor

--- a/.github/workflows/test_venmoscription.yml
+++ b/.github/workflows/test_venmoscription.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Check if actor is authorized
         run: |
-          if [ "${{ github.actor }}" != "your-username" ]; then
+          if [ "${{ github.actor }}" != "RYLiang18" ]; then
             echo "❌ Unauthorized user: ${{ github.actor }}"
             exit 1
           fi
